// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Paradox.PersonalityDimensionDetails renders component 1`] = `
<div
  className="container"
>
  <div
    className="header"
  >
    <img
      alt="Agreeableness badge, [object Object]"
      src="https://cdn.traitify.com/badges/96dbf653-6ea0-4dc0-94dc-f6db3247510c_medium"
    />
    <div
      className="name"
    >
      Influencing People
      <span
        className="divider"
      >
         | 
      </span>
    </div>
    <div
      className="name"
    >
      Agreeableness
    </div>
  </div>
  <div
    className="heading"
  >
    dimension_heading, [object Object]
  </div>
  <div
    className="p"
  >
    You describe yourself as someone who has a mature and streetwise view of other people and their views. Your first instinct is likely to be to trust other people, but you do know that others can let you down. Thus, you are probably able to be direct, but are also able to temper your approach with sensitivity for what will keep relationships healthy and intact.
  </div>
  <div
    className="heading"
  >
    dimension_heading_for_benefits, [object Object]
  </div>
  <div
    className="details"
  >
    <div>
      Forgiving style
    </div>
    <div>
      Looks for win-win outcome
    </div>
    <div>
      Negotiates with sensitivity
    </div>
    <div>
      Realistic view of others
    </div>
    <div>
      Recognises imperfection 
    </div>
    <div>
      Relational style
    </div>
  </div>
  <div
    className="heading"
  >
    room_for_growth_and_change, [object Object]
  </div>
  <div
    className="details"
  >
    <div>
      May appear too open-minded (to others)
    </div>
    <div>
      May be viewed as a ‘pushover’ by others’
    </div>
    <div>
      May let sympathy get in the way
    </div>
    <div>
      May lose out to very assertive colleagues
    </div>
    <div>
      May not always be objective enough
    </div>
    <div>
      May not go for the optimal personal win
    </div>
  </div>
</div>
`;

exports[`Paradox.PersonalityDimensionDetails renders component in third person 1`] = `
<div
  className="container"
>
  <div
    className="header"
  >
    <img
      alt="Agreeableness badge, [object Object]"
      src="https://cdn.traitify.com/badges/96dbf653-6ea0-4dc0-94dc-f6db3247510c_medium"
    />
    <div
      className="name"
    >
      Influencing People
      <span
        className="divider"
      >
         | 
      </span>
    </div>
    <div
      className="name"
    >
      Agreeableness
    </div>
  </div>
  <div
    className="p"
  >
    The candidate’s view is that they are someone who has a mature and streetwise view of other people and their views. Their first instinct is likely to be to trust other people, but they do know that others can let them down. Thus, they are probably able to be direct, but are also able to temper their approach with sensitivity for what will keep relationships healthy and intact.
  </div>
  <div
    className="heading"
  >
    potential_benefits, [object Object]
  </div>
  <div
    className="details"
  >
    <div>
      Forgiving style
    </div>
    <div>
      Looks for win-win outcome
    </div>
    <div>
      Negotiates with sensitivity
    </div>
    <div>
      Realistic view of others
    </div>
    <div>
      Recognises imperfection 
    </div>
    <div>
      Relational style
    </div>
  </div>
  <div
    className="heading"
  >
    room_for_growth_and_change, [object Object]
  </div>
  <div
    className="details"
  >
    <div>
      May appear too open-minded (to others)
    </div>
    <div>
      May be viewed as a ‘pushover’ by others’
    </div>
    <div>
      May let sympathy get in the way
    </div>
    <div>
      May lose out to very assertive colleagues
    </div>
    <div>
      May not always be objective enough
    </div>
    <div>
      May not go for the optimal personal win
    </div>
  </div>
</div>
`;

exports[`Paradox.PersonalityDimensionDetails renders component without guide 1`] = `
<div
  className="container"
>
  <div
    className="header"
  >
    <img
      alt="Agreeableness badge, [object Object]"
      src="https://cdn.traitify.com/badges/96dbf653-6ea0-4dc0-94dc-f6db3247510c_medium"
    />
    <div
      className="name"
    >
      Agreeableness
    </div>
  </div>
  <div
    className="heading"
  >
    dimension_heading, [object Object]
  </div>
  <div
    className="p"
  >
    You describe yourself as someone who has a mature and streetwise view of other people and their views. Your first instinct is likely to be to trust other people, but you do know that others can let you down. Thus, you are probably able to be direct, but are also able to temper your approach with sensitivity for what will keep relationships healthy and intact.
  </div>
  <div
    className="heading"
  >
    dimension_heading_for_benefits, [object Object]
  </div>
  <div
    className="details"
  >
    <div>
      Forgiving style
    </div>
    <div>
      Looks for win-win outcome
    </div>
    <div>
      Negotiates with sensitivity
    </div>
    <div>
      Realistic view of others
    </div>
    <div>
      Recognises imperfection 
    </div>
    <div>
      Relational style
    </div>
  </div>
  <div
    className="heading"
  >
    room_for_growth_and_change, [object Object]
  </div>
  <div
    className="details"
  >
    <div>
      May appear too open-minded (to others)
    </div>
    <div>
      May be viewed as a ‘pushover’ by others’
    </div>
    <div>
      May let sympathy get in the way
    </div>
    <div>
      May lose out to very assertive colleagues
    </div>
    <div>
      May not always be objective enough
    </div>
    <div>
      May not go for the optimal personal win
    </div>
  </div>
</div>
`;

exports[`Paradox.PersonalityDimensionDetails renders component without pitfalls 1`] = `
<div
  className="container"
>
  <div
    className="header"
  >
    <img
      alt="Agreeableness badge, [object Object]"
      src="https://cdn.traitify.com/badges/96dbf653-6ea0-4dc0-94dc-f6db3247510c_medium"
    />
    <div
      className="name"
    >
      Influencing People
      <span
        className="divider"
      >
         | 
      </span>
    </div>
    <div
      className="name"
    >
      Agreeableness
    </div>
  </div>
  <div
    className="heading"
  >
    dimension_heading, [object Object]
  </div>
  <div
    className="p"
  >
    You describe yourself as someone who has a mature and streetwise view of other people and their views. Your first instinct is likely to be to trust other people, but you do know that others can let you down. Thus, you are probably able to be direct, but are also able to temper your approach with sensitivity for what will keep relationships healthy and intact.
  </div>
  <div
    className="heading"
  >
    dimension_heading_for_benefits, [object Object]
  </div>
  <div
    className="details"
  >
    <div>
      Forgiving style
    </div>
    <div>
      Looks for win-win outcome
    </div>
    <div>
      Negotiates with sensitivity
    </div>
    <div>
      Realistic view of others
    </div>
    <div>
      Recognises imperfection 
    </div>
    <div>
      Relational style
    </div>
  </div>
</div>
`;
